--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,226 +3,277 @@
   padding: 0;
 }
 
-@media screen and (min-width: 769px) {
-  body {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    list-style: none;
-    overflow-x: hidden;
-  }
-  .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    place-content: center;
-    vertical-align: center;
-    width: 100vw;
-  }
-  .container .learn_more {
-    margin-top: calc(8px + 5vw);
-  }
-  .container .learn_more a {
-    z-index: 999;
-    text-decoration: none;
-    font-family: "Fraunces", serif;
-    font-weight: 900;
-    text-transform: uppercase;
-    color: #24303e;
-    font-size: 1.5vw;
-  }
-  .container .learn_more:visited {
-    color: #24303e;
-  }
-  .container .fake_header {
-    background-color: rgb(62, 191, 255);
-    height: calc(25px + 7vh);
-    margin-top: 0;
-    display: flex;
-    align-content: center;
-  }
-  .container .fake_header .logo {
-    position: absolute;
-    top: 2vw;
-    left: 3vw;
-    height: 2.5vw;
-  }
-  .container .fake_header .hamburger {
-    display: none;
-  }
-  .container .fake_header .nav_top {
-    position: absolute;
-    right: 1vw;
-    top: 0.5vw;
-  }
-  .container .fake_header .nav_top li {
-    display: inline-block;
-    margin-left: 1.5vw;
-    margin-right: 2vw;
-    margin-top: 1vw;
-    color: #fff;
-    text-align: center;
-    font-family: "Barlow", sans-serif;
-    font-weight: 600;
-    font-size: 1.5vw;
-  }
-  .container .fake_header .nav_top #contact {
-    color: black;
-    background-color: white;
-    font-family: "Fraunces", serif;
-    font-weight: 700;
-    border-radius: 3.7333vw;
-    padding-left: 1.5vw;
-    padding-right: 1.5vw;
-    padding-top: 0.8vw;
-    padding-bottom: 0.8vw;
-    font-size: 1.5vw;
-  }
-  .container .header {
-    background-image: url(../images/photos/image-header.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 80vh;
-    width: 100%;
-    margin-top: -5%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-  }
-  .container .header .slogan h1 {
-    font-family: "Fraunces", serif;
-    font-weight: 900;
-    font-size: 5vw;
-    color: #fff;
-    text-transform: uppercase;
-    letter-spacing: 1vw;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    margin-top: 12vw;
-  }
-  .container .header .slogan img {
-    margin-top: 5vw;
-    height: 10vw;
-  }
-  .container .middle {
-    display: flex;
-    flex-direction: row;
-  }
-  .container .middle .egg {
-    width: 50%;
-  }
-  .container .middle .egg img {
-    width: 50vw;
-    margin-left: 50vw;
-  }
-  .container .middle .brand {
-    position: absolute;
-    width: 50%;
-    text-align: center;
-    height: auto;
-    margin-top: 10vw;
-  }
-  .container .middle .brand h1 {
-    color: #24303e;
-    font-family: "Fraunces", serif;
-    font-weight: 900;
-    font-size: calc(6px + 2.5vw);
-    margin-left: 10vw;
-    text-align: left;
-    margin-right: 6vw;
-  }
-  .container .middle .brand p {
-    font-family: "Barlow", sans-serif;
-    font-weight: 600;
-    color: #808397;
-    padding-top: 3vw;
-    line-height: 2vw;
-    font-size: calc(4.5px + 1vw);
-    margin-right: 5vw;
-    margin-left: 10vw;
-    margin-bottom: 5vw;
-    text-align: left;
-  }
-  .container .middle .brand a::before {
-    content: "";
-    position: absolute;
-    width: 10.8vw;
-    height: 0.5vw;
-    border-radius: 28px;
-    background-color: #fad400;
-    bottom: 0;
-    transform-origin: right;
-    transform: scaleX(0);
-    transition: transform 0.3s ease-in-out;
-    margin-bottom: -0.2vw;
-  }
-  .container .middle .brand a:hover::before {
-    transform-origin: left;
-    transform: scaleX(1);
-  }
-  .container .upper {
-    display: flex;
-    flex-direction: row;
-  }
-  .container .upper .glass {
-    width: 50%;
-  }
-  .container .upper .glass img {
-    width: 50vw;
-    margin-top: -0.35vw;
-  }
-  .container .upper .audience {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    left: 0;
-    top: 0;
-    width: 50%;
-    text-align: center;
-    height: auto;
-    margin-top: 10vw;
-  }
-  .container .upper .audience h1 {
-    color: #24303e;
-    font-family: "Fraunces", serif;
-    font-weight: 900;
-    font-size: calc(5px + 2.5vw);
-    margin-left: 10vw;
-    text-align: left;
-    margin-right: 6vw;
-  }
-  .container .upper .audience p {
-    font-family: "Barlow", sans-serif;
-    font-weight: 600;
-    color: #808397;
-    padding-top: 3vw;
-    line-height: 2vw;
-    font-size: calc(3px + 1vw);
-    margin-right: 5vw;
-    margin-left: 10vw;
-    margin-bottom: 1vw;
-    text-align: left;
-  }
-  .container .upper .audience a::before {
-    content: "";
-    position: absolute;
-    width: 10.8vw;
-    height: 0.5vw;
-    border-radius: 28px;
-    background-color: #FE7766;
-    transform-origin: right;
-    transform: scaleX(0);
-    transition: transform 0.3s ease-in-out;
-    margin-top: 1.5vw;
-  }
-  .container .upper .audience a:hover::before {
-    transform-origin: left;
-    transform: scaleX(1);
-  }
+body {
+  font-family: "Fraunces", serif;
+  text-align: justify;
+  box-sizing: border-box;
+  place-items: center;
+  font-size: 18px;
+  width: 98vw;
+  margin: 0 1vw;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  place-content: center;
+  vertical-align: center;
+  width: 100%;
+}
+.container .learn_more {
+  margin-top: calc(10px + 5vw);
+}
+.container .learn_more a {
+  text-decoration: none;
+  font-family: "Fraunces", serif;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #24303e;
+  font-size: 4.5vw;
+}
+.container .learn_more:visited {
+  color: #24303e;
+}
+.container .fake_header {
+  background-color: rgb(62, 191, 255);
+  height: calc(25px + 7vh);
+  margin-top: 0;
+}
+.container .fake_header img[alt=logo] {
+  position: relative;
+  top: 20%;
+  left: 3%;
+  width: calc(25vw + 1em);
+}
+.container .fake_header .nav_top {
+  display: none;
+}
+.container .fake_header .hamburger {
+  position: fixed;
+  right: 5vw;
+  top: 2vw;
+}
+.container .header {
+  background-image: url(../images/photos/image-header.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-clip: content-box;
+  height: 105vw;
+  width: 100%;
+  align-items: center;
+  margin-top: -1%;
+}
+.container .header .slogan {
+  width: 100%;
+  padding-top: calc(1.2em + 0.5vh);
+  line-height: calc(1em + 5vh);
+  font-family: "Fraunces", serif;
+  font-weight: 900;
+  font-size: calc(10px + 3vw);
+  text-transform: uppercase;
+  text-align: center;
+  color: white;
+  margin-top: -7vw;
+  letter-spacing: 1.2vw;
+}
+.container .header .slogan img[alt=arrow] {
+  height: 25vw;
+  position: relative;
+  top: 5vw;
+}
+.container .egg img, .container .glass img {
+  height: 60vw;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-bottom: 0;
+}
+.container .brand, .container .audience {
+  text-align: center;
+  margin: 0 auto;
+  width: 90vw;
+  padding-top: 10vw;
+  padding-bottom: calc(5px + 10vw);
+}
+.container .brand h1, .container .audience h1 {
+  color: #24303e;
+  font-weight: 900;
+  font-size: calc(10px + 8vw);
+}
+.container .brand p, .container .audience p {
+  font-family: "Barlow", sans-serif;
+  font-weight: 600;
+  color: #808397;
+  padding-top: 5vw;
+  line-height: 7vw;
+  font-size: calc(8px + 3vw);
+}
+.container .audience {
+  text-align: center;
+}
+.container .graphic_design {
+  background: url(../images/photos/image-graphic-design.jpg) no-repeat;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-clip: content-box;
+  height: 200vw;
+  width: 98vw;
+  align-items: center;
+  margin-top: -1%;
+}
+.container .graphic_design h1 {
+  position: relative;
+  top: 110vw;
+  text-align: center;
+  font-weight: 900;
+  color: #24554a;
+  font-size: calc(10px + 8vw);
+}
+.container .graphic_design p {
+  font-family: "Barlow", sans-serif;
+  font-weight: 600;
+  color: #24554a;
+  line-height: 7vw;
+  text-align: center;
+  margin-top: 120vw;
+  font-size: calc(8px + 3vw);
+}
+.container .orange_full {
+  background-image: url(../images/photos/image-photography.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-clip: content-box;
+  height: 170vw;
+  width: 98vw;
+  align-items: center;
+}
+.container .orange_full h1 {
+  position: relative;
+  top: 100vw;
+  text-align: center;
+  font-weight: 900;
+  color: #052c3b;
+  font-size: calc(10px + 8vw);
+}
+.container .orange_full p {
+  font-family: "Barlow", sans-serif;
+  font-weight: 600;
+  color: #19536c;
+  line-height: 7vw;
+  text-align: center;
+  margin-top: 105vw;
+  font-size: calc(8px + 3vw);
+  margin-left: 2vw;
+  margin-right: 2vw;
+}
+.container .testimonials {
+  display: block;
+  padding-top: 15vw;
+  padding-bottom: 15vw;
+}
+.container .testimonials h1 {
+  font-size: 5vw;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 900;
+  color: #a7aaad;
+}
+.container .testimony {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  place-content: center;
+  margin-bottom: 10vw;
+}
+.container .testimony .quote {
+  text-align: center;
+  padding: 3vw;
+}
+.container .testimony .quote p {
+  padding-top: 5vw;
+  font-family: "Barlow", sans-serif;
+  color: #5b636d;
+  padding-bottom: 10vw;
+  font-size: 4.5vw;
+}
+.container .testimony .quote .name {
+  font-size: 5vw;
+  font-weight: 900;
+  margin-top: -3vw;
+}
+.container .testimony .quote .job {
+  font-family: "Barlow", sans-serif;
+  font-size: 4.5vw;
+  font-weight: 600;
+  color: #a7aaad;
+  padding-top: 2.5vw;
+}
+.container .testimony img {
+  border-radius: 50%;
+  width: 30vw;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.container .patchwork {
+  display: flex;
+  flex-direction: row;
+}
+.container .patchwork article {
+  display: flex;
+  flex-direction: column;
+}
+.container .patchwork article img {
+  width: 100%;
+  height: auto;
+  margin-top: -2vw;
+}
+.container .footer {
+  background-color: #90d4c6;
+  margin-top: -1.5vw;
+  padding-top: 5vw;
+  height: 90vw;
+}
+.container .footer .logo_bottom img {
+  width: 50vw;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  display: block;
+  margin-top: 15vw;
+}
+.container .footer .nav_bottom {
+  flex-direction: row;
+  place-items: center;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 10vw;
+}
+.container .footer .nav_bottom a {
+  padding-right: 8vw;
+  padding-left: 8vw;
+  font-family: "Barlow", sans-serif;
+  font-size: 4.5vw;
+  font-weight: 600;
+  text-decoration: none;
+  color: #458d7e;
+}
+.container .footer .nav_socials {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 25vw;
+}
+.container .footer .nav_socials img {
+  padding-left: 3.5vw;
+  padding-right: 3.5vw;
 }/*# sourceMappingURL=style.css.map */
